[package]
name = "beans_quest"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_asset_loader = {version = "0.14.1", features = ["2d"]}
iyes_loopless = "0.9.1"
gamelibs = {path = "gamelibs", features = ["debug"]}
bevy-inspector-egui = { version = "0.17.0", optional = true }
serde = "1.0.152"
serde_json = "1.0.93"
ldtk_rust = "0.6.0"
bevy_ecs_ldtk = "0.5.0"
bevy_rapier2d = { version = "0.20.0", features = ["simd-stable", "debug-render-2d"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
