[package]
name = "gamelibs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = {version = "0.14.1", features = ["2d"]}
bevy_ecs_tilemap = "0.9.0"
iyes_loopless = "0.9.1"
serde = "1.0.152"
serde_json = "1.0.93"
ldtk_rust = "0.6.0"
anyhow = "1.0.69"
log = "0.4.17"
bevy_ecs_ldtk = "0.5.0"
nalgebra-glm = "0.18.0"
bytemuck = "1.13.1"
bevy_rapier2d = {version = "0.21.0", features = ["simd-stable", "debug-render-2d"]}
